--- a/.github/workflows/aliyun.yml
+++ b/.github/workflows/aliyun.yml
@@ -12,7 +12,6 @@ env:
   REGISTRY: registry.cn-hangzhou.aliyuncs.com
   NAMESPACE: namespace
   IMAGE: repo
-  TAG: ${{ date +%Y%m%d-%H%M%S }}
 
 
 jobs:
@@ -23,16 +22,16 @@ jobs:
       - name: Checkout Dockerfile
         uses: actions/checkout@v2
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      # - name: Cache Docker layers
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: /tmp/.buildx-cache
-      #     key: ${{ runner.os }}-buildx-${{ github.sha }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-buildx-
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v1
@@ -42,8 +41,8 @@ jobs:
           password: ${{ secrets.ALI_DOCKER_HUB_PWD }}
           repository: anthhub/go-demo
           tags: latest
-          # cache-from: type=local,src=/tmp/.buildx-cache
-          # cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
       - name: Install Helm
         uses: azure/setup-helm@v1
@@ -51,7 +50,7 @@ jobs:
           version: v3.4.0
 
       - name: Run Helm Package
-        run: cd ./helm && helm package ./config --version=${{ date +%Y%m%d-%H%M%S }}&& helm repo index . && ls > index.html
+        run: cd ./helm && helm package ./config --version=0.0.${{ github.run_number	}} && helm repo index . && ls > index.html
 
       - name: Deploy Helm
         uses: peaceiris/actions-gh-pages@v3
