--- a/config/Chart.yaml
+++ b/config/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for Kubernetes
-name: kubeblog
-version: 0.1.2
+name: go-server-chart
+version: 0.0.1
