deploy: afd56175751963ad7b372cd1adcc9074b2ffd394

--- a/config/templates/deployment.yaml
+++ b/config/templates/deployment.yaml
@@ -28,7 +28,9 @@ spec:
     spec:
       containers:
         - name: go-server
-          image: containous/whoami
+          image: anthhub/go-demo:latest
+          imagePullSecrets:
+            - name: liuma-registry
           resources:
             limits:
               memory: "32Mi"
