deploy: 510bd195b50d94ddb344e694a581b3da6b93fab0

--- a/config/templates/ingress.yaml
+++ b/config/templates/ingress.yaml
@@ -6,7 +6,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`go.liuma.top`) && PathPrefix(`/`)
+    - match: Host(`go.liuma.top`) && PathPrefix(`/go`)
       kind: Rule
       services:
         - name: go-server
@@ -23,7 +23,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`go.liuma.top`) && PathPrefix(`/`)
+    - match: Host(`go.liuma.top`) && PathPrefix(`/go`)
       kind: Rule
       services:
         - name: go-server
