--- a/.github/workflows/aliyun.yml
+++ b/.github/workflows/aliyun.yml
@@ -8,12 +8,11 @@ on:
 
 
 env:
-  REGION_ID: cn-hangzhou
-  REGISTRY: registry.cn-hangzhou.aliyuncs.com
-  NAMESPACE: namespace
-  IMAGE: repo
-  TAG: 0.0.${{ github.run_number }}
 
+  NAMESPACE: namespace
+  TAG: 0.0.${{ github.run_number }}
+  REPO: https://anthhub.github.io/test-deploy
+  REQ: $(curl -s https://anthhub.github.io/test-deploy/latest?q=$RANDOM)
 
 jobs:
   build:
@@ -51,7 +50,7 @@ jobs:
           version: v3.4.0
 
       - name: Run Helm Package
-        run: cd ./helm && helm package ./config --version=0.0.${{ github.run_number	}} && helm repo index . && ls > index.html && echo ${{ env.TAG }} > latest
+        run: cd ./helm && helm package ./config --version=${{ env.TAG }} && helm repo index . && ls > index.html && echo ${{ env.TAG }} > latest
 
       - name: Deploy Helm
         uses: peaceiris/actions-gh-pages@v3
@@ -66,21 +65,24 @@ jobs:
           hosts: "118.190.37.169"
           privateKey: ${{ secrets.PRIVATE_KEY }}
           command: |
-            helm repo add test-deploy https://anthhub.github.io/test-deploy
-            helm repo update
-            while $(curl https://anthhub.github.io/test-deploy/latest) != echo ${{ env.TAG }} 
+            helm repo add test-deploy ${{ env.REPO }}
+
+            until [ ${{ env.REQ }} = ${{ env.TAG }} ]
             do
-                echo "sleeping"
-                sleep 1
+              sleep 1
+              echo "sleeping"
+              echo ${{ env.REQ }} -- ${{ env.TAG }}
             done
+            echo "pass"
+
+            helm repo update
             helm search repo test-deploy
             if helm status test-deploy 
             then
-              helm upgrade test-deploy test-deploy/go-server-chart --version=0.0.${{ github.run_number	}}
+              helm upgrade test-deploy test-deploy/go-server-chart --version=${{ env.TAG }}
             else
-              helm install test-deploy test-deploy/go-server-chart --version=0.0.${{ github.run_number	}}
+              helm install test-deploy test-deploy/go-server-chart --version=${{ env.TAG }}
             fi
+
             helm ls
-
-
 
